<resources>
    <string name="app_name">BuddyCall</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">488375495701555</string>
    <string name="fb_login_protocol_scheme">fb488375495701555</string>
    <string name="summary">피드</string>
    <string name="search">검색</string>
    <string name="group_chat">모임채팅</string>
    <string name="full_list">모임검색</string>
    <string name="option">옵션</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">닉네임</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">계정탈퇴</string>
    <string name="connect_account">연결된 계정</string>
    <string name="default_email">username@gmail.com</string>
    <string name="article_title">글 제목</string>
    <string name="content">내용</string>
    <string name="contact">연락하기</string>
    <string name="created_at">createdAt</string>
    <string name="delete">삭제하기</string>
    <string name="edit">수정하기</string>
    <string name="input_content">내용을 입력하세요.</string>
    <string name="show_map">지도로 보기</string>
    <string name="location">위치</string>
    <string name="please_input_search_keyword">  검색어를 입력해주세요.</string>
    <string name="empty_result">검색 결과가 없습니다</string>
    <string name="title">제목</string>
    <string name="sign_up">회원가입</string>
    <string name="log_in">로그인</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="input_title">글 제목</string>
    <string name="msg_exist_tag">이미 존재하는 태그입니다.</string>

</resources>