<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:padding="5dp"
    android:orientation="horizontal" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/writerProfileImage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="6dp"
        android:src="@drawable/profile_image"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.7"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/writerNameTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/content"
            android:maxLines="1"
            android:textColor="#9A000000"
            android:textSize="13sp"
            android:ellipsize="end"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/currentNumberTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="end"
                android:layout_marginTop="4dp"
                android:text="1"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:text="/"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/recruitmentNumberTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start"
                android:layout_marginTop="4dp"
                android:text="4"
                android:textSize="40sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="date"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>