<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="프로필 수정"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_cc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

    <LinearLayout
        android:id="@+id/userInfo"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfileImage"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_weight="0"
            android:padding="16dp"
            android:src="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/userNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginHorizontal="12dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/nickname"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeLayout"
        app:layout_constraintTop_toBottomOf="@id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/userNameChangeBtn"
            android:layout_width="wrap_content"
            android:ems="8"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"

            android:text="이름 변경"/>

        <Button
            android:id="@+id/userNameChangeUpdateBtn"
            android:layout_width="wrap_content"
            android:ems="8"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="저장"
            android:visibility="gone"/>

        <Button
            android:id="@+id/userProfileChangeBtn"
            android:layout_width="wrap_content"
            android:ems="8"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="프로필 변경"/>
    </LinearLayout>



    <Button
        android:id="@+id/accountInfoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_marginHorizontal="36dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toStartOf="@id/profileEditButton"/>

    <Button
        android:id="@+id/profileEditButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/accountInfoButton"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/changeLayout"
        app:layout_constraintBottom_toTopOf="@id/accountInfoButton"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:nestedScrollingEnabled="false">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageButton
                android:id="@+id/addNewTagBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_add_box_24" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
